--- a/src/components/bargraph/BarGraph.css
+++ b/src/components/bargraph/BarGraph.css
@@ -1,7 +1,15 @@
-#rectangle {
-  width:200px;
-  height:200px;
-  background-color: blue;
+.segment {
+  color: white;
+  max-width: 50%;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 5px black;
+  font-size: 1.5em;
+  align-items: center;
+  justify-content: center;
+  transition: all .2s ease-in-out; 
 
 }
 
+.segment:hover {
+  transform: scale(1.03);
+}
