--- a/src/components/bargraph/BarGraph.css
+++ b/src/components/bargraph/BarGraph.css
@@ -7,7 +7,9 @@
   align-items: center;
   justify-content: center;
   transition: all .2s ease-in-out; 
-
+  cursor: pointer;
+  display: flex;
+  background-image: url(./../../img/IMG_5599.JPG);
 }
 
 .segment:hover {
