added image prop to BarSegment, placed in dummy images

--- a/src/components/bargraph/BarGraph.css
+++ b/src/components/bargraph/BarGraph.css
@@ -9,7 +9,8 @@
   transition: all .2s ease-in-out; 
   cursor: pointer;
   display: flex;
-  background-image: url(./../../img/IMG_5599.JPG);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .segment:hover {
