Beginning Impl for new idea

--- a/src/components/InfoScreen.css
+++ b/src/components/InfoScreen.css
@@ -7,7 +7,7 @@
 .infoContainer {
   height: 80vh;
   width: 95%;
-  background-color: #AEECEF;
+  background-color: #d9f3f4;
   border-radius: 25px;
 }
 
