--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* Copyright (c) 2017 Rachel Philip
+This work is available under the "MIT license".
+Please see the file COPYING in this distribution
+for license terms. */
+
 body {
   margin: 0;
   padding: 0;
